# learn-webgpu

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp
src/core/: renderer.hpp  renderer_creator.hpp  window.cpp  window.hpp
src/runtime/common/: assert.hpp  move_only.h  nonmovable.h
src/runtime/grapgics_engine/: attribute.hpp  binaty_vertices.hpp  concepts.hpp  layout.hpp  pipeline_config.hpp  render_pass_encoder.hpp  renderer.hpp  resource_manager.hpp  resources.hpp
src/runtime/grapgics_engine/implementatios/webgpu/: mesh.cpp  mesh.hpp  render_pass_encoder.cpp  render_pass_encoder.hpp  renderer.cpp  resource_manager.cpp  resource_manager.hpp
src/runtime/grapgics_engine/implementatios/webgpu/wrappers/: adapter.cpp  adapter.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_encoder.cpp  command_encoder.hpp  device.cpp  device.hpp  instance.hpp  pipeline_layout.cpp  pipeline_layout.hpp  queue.cpp  queue.hpp  render_pipeline.cpp  render_pipeline.hpp  resource_holder.hpp  shader_module.cpp  shader_module.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  texture_view.cpp  texture_view.hpp  uniform_buffer.cpp  uniform_buffer.hpp
src/tasks/: 02.first_attributes.cpp  03.indices.cpp  05.depth.cpp  first_attributes.cpp  first_triangle.cpp  indices.cpp  task_registry.cpp  task_registry.hpp  uniform_buffers.cpp
